fixed vertical align of weather icons

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -17,7 +17,7 @@
 .Weather canvas {
   display: inline-block;
   margin: 10px 10px;
-  vertical-align: middle;
+  vertical-align: bottom;
 }
 
 .Weather h1 {
